# iris-with-cicd-docker-k8

./: .dockerignore  Dockerfile  README.md  idea.txt  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci-cd.yaml
app/: main.py  model.joblib  model_utils.py
k8s/: deployment.local.yaml  deployment.yaml  service.nodeport.yaml
test/: test_app.py
