[project]
name = "cicd-iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pydantic==2.8.0",
    "scikit-learn==1.5.1",
    "uvicorn==0.30.0",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.2",
]
